--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   },
   "scripts": {
     "test": "nodemon src/index.js",
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC"
