--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "test": "nodemon src/index.js",
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "author": "",
