--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clase17",
+  "name": "mercado_liebre",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -42,6 +42,7 @@
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.4.24",
     "ignore-by-default": "^1.0.1",
+    "index.js": "^0.0.3",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
     "is-binary-path": "^2.1.0",
@@ -57,7 +58,6 @@
     "minimatch": "^3.1.2",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
-    "nodemon": "^2.0.20",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.12.2",
@@ -91,9 +91,12 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "test": "nodemon src/index.js",
+    "start": "node app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
